--- a/frontend/src/app/components/chat/chat.html
+++ b/frontend/src/app/components/chat/chat.html
@@ -16,9 +16,9 @@
           </svg>
         </div>
 
-        <h1 class="welcome-title">Xin Chao!</h1>
+        <h1 class="welcome-title">Xin Chào!</h1>
         <p class="welcome-subtitle">
-          Toi la tro ly sang loc benh nhan. Toi se giup ban tim dung chuyen khoa dua tren cac trieu chung cua ban.
+            Tôi là trợ lý sàng lọc bệnh nhân. Tôi sẽ giúp bạn tìm đúng chuyên khoa dựa trên các triệu chứng của bạn.
         </p>
 
         <button
@@ -29,7 +29,7 @@
         </button>
 
         <p class="privacy-notice">
-          Thong tin cua ban se duoc bao mat va chi su dung cho muc dich sang loc.
+          Thông tin của bạn sẽ được bảo mật và chỉ sử dụng cho mục đích sàng lọc.
         </p>
       </div>
     </div>
